--- a/graphql-example/GraphQlExample/GraphQlExample/GraphQlExample.csproj
+++ b/graphql-example/GraphQlExample/GraphQlExample/GraphQlExample.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="GraphQL" Version="3.0.0" />
     <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="3.4.0" />
     <PackageReference Include="GraphQL.Server.Ui.Playground" Version="3.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
